--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="apple-touch-icon" href="app_icon_512.png.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <meta name="apple-mobile-web-app-title" content="Chore Chart">
 <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="UTF-8" />
