--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="apple-touch-icon" href="/Chore-chart/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/Chore-chart/favicon-32x32.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Chore Chart</title>
